--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "type": "module",
+  "description": "Servidor para pruebas en el SENA",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -24,5 +25,7 @@
   "devDependencies": {
     "json-server": "^0.17.4"
   },
-  "description": "Servidor para pruebas en el SENA"
+  "resolutions": {
+    "iconv-lite": "^0.6.3"
+  }
 }
